# agent-viz

./: README.md  pyproject.toml
agent_viz/: __init__.py  event_model.py  replay.py  server.py  session.py  tracer.py
agent_viz/static/: app.js  index.html  style.css
examples/: demo_agent.py
tests/: __init__.py  test_event_model.py  test_replay.py  test_session.py  test_tracer.py
