[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_viz"
version = "0.1.0"
description = "Real-time visualization of AI agent workflows in the browser via WebSockets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "agent_viz contributors" }
]
keywords = ["ai", "agent", "visualization", "websocket", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-viz-replay = "agent_viz.replay:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_viz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build]
include = [
    "agent_viz/**",
]
